feat: delete ping
