# app/docs/swagger.json
@@ -424,29 +424,6 @@
                 }
             }
         },
-        "/ping": {
-            "get": {
-                "description": "Check if the application server is running",
-                "consumes": [
-                    "*/*"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "health-controller"
-                ],
-                "summary": "Application liveness check function",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.UserResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/play/{playlist_id}": {
             "get": {
                 "security": [
@@ -1532,8 +1509,7 @@
                 3600000000000,
                 1,
                 1000,
-                1000000,
-                1000000000
+                1000000
             ],
             "x-enum-varnames": [
                 "minDuration",
@@ -1546,8 +1522,7 @@
                 "Hour",
                 "Nanosecond",
                 "Microsecond",
-                "Millisecond",
-                "Second"
+                "Millisecond"
             ]
         }
     },
